# CMP-OffsetPorter

./: .gitignore  0-BUILD-WINDOWS7-x64.cmd  CMakeLists.txt  README.md
.github/workflows/: build-windows-x64.yml
resources/: app.manifest  app.rc
src/: main.cpp
tools/: build-windows7-x64.ps1
